# Industrial-Safety

./: .gitignore  README.md  index.html  operational-timeline-architecture.md  package-lock.json  package.json  tsconfig.app.json
backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2b13267d9382_correlation_engine_and_incidents.py  2b2abe20fb7f_risk_engine_and_emergency_shutdown.py  347e518cce2b_scope_recommendation_identity_key_.py  6e0775e4f493_recommendation_engine.py  7a9bf0e8fad2_initial_schema.py  a49d5509a109_event_plumbing_for_operational_timeline.py  a4c8e5d21f36_plant_type_and_instrument_metadata.py  dcd6c2406a80_simulation_state_worker_location_sensor_.py
backend/app/: main.py
backend/app/ai/: __init__.py  config.py  exceptions.py  service.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py
backend/app/correlation_engine/: __init__.py  config.py  decide.py  narrative.py
backend/app/database/: base.py  session.py
backend/app/models/: __init__.py  equipment.py  event.py  incident.py  permit.py  plant.py  recommendation.py  risk_snapshot.py  sensor.py  worker.py  zone.py
backend/app/plant_types/: __init__.py  refinery.py  (+2 more)
backend/scripts/: seed.py
backend/tests/: conftest.py  test_ai_foundation.py  test_correlation_engine.py  test_event_severity.py  test_health.py  test_incident_api.py  test_recommendation_api.py  test_recommendation_engine.py  test_reports_api.py  test_risk_api.py  test_risk_engine.py  test_simulation.py  test_state.py  test_zones.py
(+212 files in other folders)
