[project]
name = "industrial-safety-backend"
version = "0.1.0"
description = "Backend foundation for the Industrial Safety Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
